Ajustes finais de estrutura e funcionalidade
